[tool.poetry]
name = "rmml"
version = "0.1.0"
description = ""
authors = ["Jeremy Mill <jeremymill@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
cbapi = "^1.7.10"
requests = "^2.31.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
